// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kubIlH ibmcuz"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-cVdwKd RmGAT"
      tabindex="0"
    >
      <span
        class="sc-kIBtVG ezCWBi"
      >
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZoehQ gmioVX sc-dxdKQw cuBRca"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hKOsxR cnkhmA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djDiuc bXfFPL"
    >
      : 
    </i>
    <span
      class="sc-gVZcgN hQJHfV"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kubIlH ibmcuz"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-cVdwKd RmGAT"
      tabindex="0"
    >
      <span
        class="sc-kIBtVG ezCWBi"
      >
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZoehQ gmioVX sc-dxdKQw cuBRca"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hKOsxR cnkhmA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djDiuc bXfFPL"
    >
      : 
    </i>
    <span
      class="sc-gVZcgN hQJHfV"
    >
      nice game 
      <div
        class="sc-ikrMhg iRLQJB sc-eillgj fyDjz"
        tabindex="-1"
      >
        <span
          class="sc-ewKWQi cmpVsI"
        >
          🔥
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message sent as an emote reads as an action line 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kubIlH ibmcuz"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-cVdwKd RmGAT"
      tabindex="0"
    >
      <span
        class="sc-kIBtVG ezCWBi"
      >
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-cuyoTo klWohM"
    >
      * 
    </span>
    <span
      class="sc-hZoehQ gmioVX sc-dxdKQw sc-fTtGjF cuBRca iwOQEM"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hKOsxR cnkhmA"
      >
                   
      </span>
    </span>
     
    <span
      class="sc-gVZcgN sc-bTeeUd hQJHfV bpwxCw"
    >
      waves at everyone
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kubIlH ibmcuz"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-cVdwKd RmGAT"
      tabindex="0"
    >
      <span
        class="sc-kIBtVG ezCWBi"
      >
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZoehQ gmioVX sc-dxdKQw cuBRca"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hKOsxR cnkhmA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djDiuc bXfFPL"
    >
      : 
    </i>
    <span
      class="sc-gVZcgN hQJHfV"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kubIlH ibmcuz"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-cVdwKd RmGAT"
      tabindex="0"
    >
      <span
        class="sc-kIBtVG ezCWBi"
      >
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZoehQ gmioVX sc-dxdKQw cuBRca"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hKOsxR cnkhmA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djDiuc bXfFPL"
    >
      : 
    </i>
    <span
      class="sc-gVZcgN hQJHfV"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-hZoehQ gmioVX sc-hKlkwe jczyVw"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hKOsxR cnkhmA"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kubIlH ibmcuz"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-cVdwKd RmGAT"
      tabindex="0"
    >
      <span
        class="sc-kIBtVG ezCWBi"
      >
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZoehQ gmioVX sc-dxdKQw cuBRca"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hKOsxR cnkhmA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djDiuc bXfFPL"
    >
      : 
    </i>
    <span
      class="sc-gVZcgN hQJHfV"
    >
      hey
       
      <span
        class="sc-hZoehQ gmioVX sc-hKlkwe jczyVw"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hKOsxR cnkhmA"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-hZoehQ gmioVX sc-hKlkwe jczyVw"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hKOsxR cnkhmA"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kubIlH ibmcuz"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-cVdwKd RmGAT"
      tabindex="0"
    >
      <span
        class="sc-kIBtVG ezCWBi"
      >
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZoehQ gmioVX sc-dxdKQw cuBRca"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hKOsxR cnkhmA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djDiuc bXfFPL"
    >
      : 
    </i>
    <span
      class="sc-gVZcgN hQJHfV"
    >
      hey
       
      <span
        class="sc-hZoehQ gmioVX sc-hKlkwe jczyVw"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hKOsxR cnkhmA"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kubIlH ibmcuz"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-cVdwKd RmGAT"
      tabindex="0"
    >
      <span
        class="sc-kIBtVG ezCWBi"
      >
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZoehQ gmioVX sc-dxdKQw cuBRca"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hKOsxR cnkhmA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djDiuc bXfFPL"
    >
      : 
    </i>
    <span
      class="sc-gVZcgN hQJHfV"
    >
      <span
        class="sc-hZoehQ gmioVX sc-hKlkwe jczyVw"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hKOsxR cnkhmA"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kubIlH ibmcuz"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-cVdwKd RmGAT"
      tabindex="0"
    >
      <span
        class="sc-kIBtVG ezCWBi"
      >
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZoehQ gmioVX sc-dxdKQw cuBRca"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hKOsxR cnkhmA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djDiuc bXfFPL"
    >
      : 
    </i>
    <span
      class="sc-gVZcgN hQJHfV"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-hZoehQ gmioVX sc-hKlkwe jczyVw"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hKOsxR cnkhmA"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kubIlH cDfjYM"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-cVdwKd RmGAT"
      tabindex="0"
    >
      <span
        class="sc-kIBtVG ezCWBi"
      >
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZoehQ gmioVX sc-dxdKQw cuBRca"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hKOsxR cnkhmA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djDiuc bXfFPL"
    >
      : 
    </i>
    <span
      class="sc-gVZcgN hQJHfV"
    >
      Hey
       
      <span
        class="sc-hZoehQ gmioVX sc-hKlkwe jczyVw"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hKOsxR cnkhmA"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kubIlH ibmcuz"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-cVdwKd RmGAT"
      tabindex="0"
    >
      <span
        class="sc-kIBtVG ezCWBi"
      >
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZoehQ gmioVX sc-dxdKQw cuBRca"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hKOsxR cnkhmA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djDiuc bXfFPL"
    >
      : 
    </i>
    <span
      class="sc-gVZcgN hQJHfV"
    >
      <div
        class="sc-ikrMhg iRLQJB sc-eillgj fyDjz"
        tabindex="-1"
      >
        <span
          class="sc-ewKWQi fryQrD"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-eillgj fyDjz"
        tabindex="-1"
      >
        <span
          class="sc-ewKWQi fryQrD"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-ikrMhg iRLQJB sc-eillgj fyDjz"
        tabindex="-1"
      >
        <span
          class="sc-ewKWQi fryQrD"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kubIlH ibmcuz"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ikrMhg iRLQJB sc-cVdwKd RmGAT"
      tabindex="0"
    >
      <span
        class="sc-kIBtVG ezCWBi"
      >
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-djDiuc bXfFPL"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hZoehQ gmioVX sc-dxdKQw cuBRca"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hKOsxR cnkhmA"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-djDiuc bXfFPL"
    >
      : 
    </i>
    <span
      class="sc-gVZcgN hQJHfV"
    >
      <div
        class="sc-ikrMhg iRLQJB sc-eillgj fyDjz"
        tabindex="-1"
      >
        <span
          class="sc-ewKWQi cmpVsI"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-eillgj fyDjz"
        tabindex="-1"
      >
        <span
          class="sc-ewKWQi cmpVsI"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-eillgj fyDjz"
        tabindex="-1"
      >
        <span
          class="sc-ewKWQi cmpVsI"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-eillgj fyDjz"
        tabindex="-1"
      >
        <span
          class="sc-ewKWQi cmpVsI"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-eillgj fyDjz"
        tabindex="-1"
      >
        <span
          class="sc-ewKWQi cmpVsI"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-eillgj fyDjz"
        tabindex="-1"
      >
        <span
          class="sc-ewKWQi cmpVsI"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-eillgj fyDjz"
        tabindex="-1"
      >
        <span
          class="sc-ewKWQi cmpVsI"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-eillgj fyDjz"
        tabindex="-1"
      >
        <span
          class="sc-ewKWQi cmpVsI"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-eillgj fyDjz"
        tabindex="-1"
      >
        <span
          class="sc-ewKWQi cmpVsI"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-eillgj fyDjz"
        tabindex="-1"
      >
        <span
          class="sc-ewKWQi cmpVsI"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ikrMhg iRLQJB sc-eillgj fyDjz"
        tabindex="-1"
      >
        <span
          class="sc-ewKWQi cmpVsI"
        >
          😀
        </span>
      </div>
    </span>
  </div>
</div>
`;
